tests/errors/sem.expected-constant.decl-init.or
main :: () -> void {
    X :: {x := 6; x; };
    X;
};
